# Cpp-Practice

./: README.md
General practice/: compilation_ex.cpp  extern_example.cpp  sum.h
Koenig Notes/: 0-probs.cpp  1-probs.cpp  2-probs.cpp  3-probs.cpp  4-probs.cpp  CMakeLists.txt
Koenig Notes/4-files/: 4-content.cpp  4-probs.cpp  README.md  Student_info.cpp  Student_info.h  median.cpp  median.h
